[package]
name = "lish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liso = {path = "../.."}
shellish_parse = "2.0"

[target.'cfg(unix)'.dependencies]
nix = {version = "0.25", default-features = false, features=["signal"]}

[features]
default = []
no-unix = []